namespace Conciliacao.Domain.Entities
{
    public class Client
    {
        public string Code { get; set; } = string.Empty;
    }
}