namespace Conciliacao.Domain.Enums
{
    public enum ReconciliationResult
    {
        Matched,
        Divergent,
        Missing,
        Extra
    }
}